2016-01-19  Jean-Louis Martineau <martineau@zmanda.com>
	* config/set_full_version: Fix for new URL path

2016-01-19  Jean-Louis Martineau <martineau@zmanda.com>
	* NEWS: Typo
	* ReleaseNotes: Typo

2016-01-19  Jean-Louis Martineau <martineau@zmanda.com>
	* NEWS: Change in 3.3.8
	* ReleaseNotes: Change in 3.3.8
	* VERSION: 3.3.8

2015-12-10  Xu Han <xhan@carbonite.com>
	* packaging/common/post_inst_functions.sh: Adding the correct
	  Amanda sbin path to Solaris Amandabackup user profile file

2015-12-10  Jean-Louis Martineau <martineau@zmanda.com>
	* perl/Amanda/Changer/robot.pm (slot_can_have_label): New function to
	  tell if a slot can have a label, ths function check the barcode
	* perl/Amanda/Recovery/Scan.pm: Do not scan a slot if
	  slot_can_have_label return 0

2015-12-10  Jean-Louis Martineau <martineau@zmanda.com>
	* perl/Amanda/Recovery/Scan.pm: Set a user_msg_fn in new
	* server-src/amfetchdump.pl: Add a user_msg_fn to print scan error to
	  stdout
	* server-src/amvault.pl: Adda user_msg_fn to print scan error to
	  stdout and log as L_INFO

2015-12-09  Jean-Louis Martineau <martineau@zmanda.com>
	* ndmp-src/ndma_tape.c (ndmta_read_quantum): Fix setting
	  ta->mover_state.record_num

2015-12-09  Jean-Louis Martineau <martineau@zmanda.com>
	* client-src/sendbackup.c: Fir debugging message
	* common-src/glib-util.c: Improve error message

2015-12-09  Jean-Louis Martineau <martineau@zmanda.com>
	* application-src/amlog-script.pl, application-src/ampgsql.pl,
	  application-src/amraw.pl, application-src/amsamba.pl,
	  application-src/amsuntar.pl, application-src/amzfs-sendrecv.pl,
	  application-src/amzfs-snapshot.pl,
	  application-src/script-email.pl: Log the arguments

2015-11-25  Jean-Louis Martineau <martineau@zmanda.com>
	* perl/Amanda/Report/human.pm: Fix crash if orig_size == 0

2015-11-11  Jean-Louis Martineau <martineau@zmanda.com>
	* common-src/amcryptsimple.pl: Use 'gpg-agent --use-standard-socket-p'
	  to find if gpg-agent must be used
